# search_and_apply

./: .gitignore  Cargo.toml  README.md  system_diagram.drawio
company_common/: Cargo.toml
company_common/src/: lib.rs
company_data_store/: Cargo.toml  README.md
company_data_store/src/: lib.rs
company_scraper/: Cargo.toml  README.md
company_scraper/src/: lib.rs  main.rs
company_scraper/tests/: tests.rs
job_applier/: Cargo.toml
sa_postgres_interface/: Cargo.toml  README.md
sa_postgres_interface/src/: lib.rs  main.rs
serp_service/: Cargo.toml
serp_service/src/: lib.rs  main.rs
serp_service/tests/: tests.rs
src/: main.rs
website_discovery/: Cargo.toml  README.md
website_discovery/src/: lib.rs  main.rs
website_discovery/tests/: tests.rs
