[workspace]
members = [ "company_common",
    "company_data_store",
    "company_scraper",
    "job_applier", "website_discovery",
]

[package]
name = "search_and_apply"
edition = "2021"

[dependencies]
company_data_store = { path = "company_data_store" }
company_scraper = { path = "company_scraper" }
job_applier = { path = "job_applier" }
postgres = "0.19.7"