[package]
name = "serp_service"
version = "0.1.0"
edition = "2021"

[dependencies]
company_data_store = { path = "../company_data_store" }
serde = "^1.0"
serde_json = "^1.0"
hyper = "0.14.29"
hyper-rustls = "0.24.2"
chrono = "0.4.38"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "*"
reqwest = "0.12.5"
yup-oauth2 = "*"
anyhow = "1.0.86"
futures = "0.3.30"